css/main.css
/* 1. ---General Styles--- */
#mobile-outline {
   outline: 20px solid #333;
   max-width: 412px;
   margin: 20px auto 20px auto;
   border-radius: 10px;
} 
 
body {
   color: #626262;
   font-family: 'Sanchez', 'Times New Roman', serif;
   font-size: 12px;
}
 
a {
   text-decoration: none;
   transition: all .5s ease-in-out;
}
 
input, textarea {
   display: block;
   margin: 0;
   padding: 0;
}
 
.cr-red {
   color: #9a2018;
}
 
.line-separator {
   margin-top: 20px;
   border-top: solid 3px #CF6666;
   padding-top: 20px;
}

h2 {
   font-size: 24px;
}

.mini-header {
   color: #9a2018;
   font-size: 14px;
}

.centre-text {
   text-align: center;
}


/* 2. ---Main Nav--- */

#main-nav label img {
   width: 20px;
   height: 20px;
   margin-top: 15px;
   cursor: pointer;
   transition: all .5s ease;
   margin-bottom: 20px; 
} 
 
#main-nav input, #burger-con {
   display: none;
}
 
/*   ~ sibling selector   */
 
 
#main-nav input:checked ~ #burger-con {
   display: block;
}
 
#main-nav input:checked ~ label img {
   transform: rotate(90deg);
}
 
#main-nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
}
 
#main-nav ul li a {
   display: block;
   padding: 10px 0 10px 0;
   text-align: center;
   color: #626262;
}
 
#main-nav ul li {
   border-bottom: 1px solid #efefef;
}
 
 
 
#main-nav ul li:first-child {
   border-top: 1px solid #efefef;
}
 
#main-nav ul li:last-child {
   margin-bottom: 10px;
} 
 
 
 
#logo {
   margin-bottom: 20px;
   max-width: 382px;
}

/* 3. ---Main Hero Image--- */

#hero-spa { /*spa page*/
   background: url(../images/m_spa1.png) no-repeat;
   height: 223px;
}
#hero-about { /*about page*/
   background: url(../images/m_about1.png) no-repeat;
   height: 223px;
}
#hero-room { /*room page*/
   background: url(../images/m_rooms1.png) no-repeat;
   height: 223px;
}

.book-now {
   background-color: #9a2018;
   height: 66px;
   color: #fff;
   font-size: 16px;
   transition: background-color 500ms linear;
   display: flex;
   justify-content: center;
   align-items: center;
   font-style: italic;
   transition:all 0.3s ease;
   cursor: pointer;
}

.book-now:hover {
   background-color: #e87b7b;
}

#book-now-hero {
   height: 67px;
}

#hero-heading-box {
   align-self: end; 
}

.heading-box {
   background-color: rgb(255, 255, 255);
   padding: 10px 15px;
}

#about-summary p {
   font-size: 14px;
   line-height: 22px;
   margin-bottom: 20px;
}

/* 7. ---Contact--- */

#contact-hero-text {
   margin-top: 15px;
   margin-bottom: 25px;
}

#contact-hero-address p {
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 22px;
}

#contact-hero-address {
   margin-bottom: 30px;
}

#contact-hero-address h3 {
   margin-bottom: 25px;
}



#contact-hero-form form {
   display: flex;
   flex-direction: column;
}

#contact-hero-form input, textarea {
   padding: 22px;
   border: 2px solid #d6d6d6;
   background-color: #f7f7f7;
   border-radius: 5px;
   margin-bottom: 30px;
   font: inherit;
   width: auto;
}

#contact-hero-form textarea {
   height: 250px;
}



#contact-hero-form input[type="submit"] {
   padding: 12px 28px;
   background: #9a2018;
   color: #fff;
   border: none;
   transition: all 200ms ease-in;
   width: 150px;
   align-self: flex-end;
}

#contact-hero-form input[type="submit"]:hover {
   background-color: #e87b7b;
   border-radius: 5px;
}



/* 8. ---Footer--- */

#footer-hero {
   background-image: url(../images/m_footer.png); /*add image*/
   background-repeat: no-repeat;
   color: #fff;
   font-size: 12px;
   margin-top: 40px;
   padding-bottom: 80px;
}
 
#footer-hero h3 {
   margin-top: 30px;
   font-size: 28px;
   margin-bottom: 16px;
}
 
#footer-privacy .line-seperator {
   margin-top: 0px;
}
 
#footer-contact-info h3 {
   font-size: 23px;
}
 
#footer-contact-info p {
   margin-bottom: 20px;
   line-height: 18px;
   font-size: 11px;
}

/* spa body styles*/

.spa-serivces {
   background-color: #f6d9d9;
   margin-bottom: 50px;
}

/* about page styles */

.ladeside-sections {
   background-color: #e0e0e0;
   border-radius: 20px;
   padding: 15px;
   margin-bottom: 20px;
}

/* --- headers with images --- */

#hero-pool {
   background: url(../images/m_lakeside_pool.png);
   height: 223px;
}

#pool-container {
   margin-top: 154px;
}

#hero-gift {
   background: url(../images/m_spa_recroom.png);
   height: 223px;
}

#gift-container {
   margin-top: 154px;
}

#hero-sports {
   background: url(../images/m_gym_sports_centre.png);
   height: 223px;
}

#sports-container {
   margin-top: 154px;
}

#hero-gallery {
   background: url(../images/m_artist_gallery.png);
   height: 223px;
}

#gallery-container {
   margin-top: 154px;
}

#hero-spa-policies {
   background: url(../images/m_spa_policies_information.png);
   height: 223px;
}

#spa-policies-container {
   margin-top: 154px;
}

#hero-unforeseen {
   background: url(../images/Rectangle\ 89.png);
   height: 120px;
}

#unforeseen-container {
   margin-top: 51px;
}

#hero-ontario-spa {
   background: url(../images/Rectangle\ 89.png);
   height: 120px;
}

#ontario-spa-container {
   margin-top: 51px;
}

#hero-spa-products {
   background: url(../images/Rectangle\ 89.png);
   height: 120px;
}

#spa-products-container {
   margin-top: 51px;
}

#hero-contact {
   background: url(../images/m_contact.png);
   height: 223px;
}

#heading-container {
   margin-top: 154px;
}

